# Lint

./: README.md  lint.py  pyproject.toml
lint/: __init__.py  main.py
